@@ -60,7 +60,7 @@ AC_PROG_LIBTOOL()
 dnl **********************************
 dnl *** Check for standard headers ***
 dnl **********************************
-AC_CHECK_HEADERS([errno.h memory.h math.h stdlib.h stdio.h string.h unistd.h])
+AC_CHECK_HEADERS([errno.h memory.h math.h stdlib.h string.h unistd.h])
 
 dnl ******************************
 dnl *** Check for i18n support ***
